--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,79 +1,23 @@
-section{
-  height: 100vh;;
+[type="file"] {
+  border: 0;
+  clip: rect(0, 0, 0, 0);
+  height: 1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute !important;
+  white-space: nowrap;
+  width: 1px;
 }
 
-section .header{
-  text-align: center;
-  font-size: 25px;
-  font-weight: bolder;
-  margin-bottom: 50px;
+[type="file"] + label {
+  /* File upload button styles */
 }
 
-.body{
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  height: 100%;
-  gap: 50px;
+[type="file"]:focus + label,
+[type="file"] + label:hover {
+  /* File upload hover state button styles */
 }
 
-.content-left .top p{
-  text-align: center;
-  font-size: 20px;
-}
-
-.top .road, .bottom .update-select {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 20px;
-  margin-bottom:15px;
-}
-
- select{
-  width: 100%;
-  height: 35px;
-}
-
-.body .content-left .top{
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 40px;
-}
-
-
-.body form{
-  border-radius: 10px;
-}
- input{
-  margin-bottom: 10px;
-  border-radius: 5px;
-  padding: 5px 5px;
-  font-size: 15px;
-  height: 35px;
-  width: 100%;
-
-}
-
-button {
-  border-radius: 5px;
-  background-color: #f37925;
-  color: black;
-  font-weight: bold;
-  padding: 10px 10px;
-  margin-right: auto;
-  margin-left: auto;
-  margin-bottom: 20px;
-  min-width: 200px;
-  cursor: pointer;
-}
-
-.logistic-btn{
-  margin-right: auto;
-  margin-left: auto;
-  margin-bottom: 30px;
-}
-
-.bottom{
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 20px;
+[type="file"]:focus + label {
+  /* File upload focus state button styles */
 }
