--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,157 @@
-/* You can add global styles to this file, and also import other style files */
-.ng-tns-c55-0, .ngx-charts{
+body{
+  padding: 0;
+  margin: 0;
+}
+
+.uploadTitle{
+  justify-content: center;
+  align-items: center;
+  display: flex;
+
+}
+
+
+.uploadTop{
+  display: flex;
+  justify-content: space-around;
+  margin-top: 20px;
+
+}
+.clickButton{
+  border: none;
+  cursor: pointer;
+  color: white;
+  background-color: teal;
+  padding: 0.7rem;
+  font-size: 14px;
+  border-radius: 10px;
+  width: 200px;
+  margin: 40px 0px;
+  font-weight: bold;
+}
+
+.clickButtonRight{
+  border: none;
+  cursor: pointer;
+  color: white;
+  background-color: teal;
+  padding: 0.7rem;
+  font-size: 14px;
+  border-radius: 10px;
+  margin: 40px 0px;
+  width: 200px;
+  font-weight: bold;
+}
+.uploadDiv{
+  justify-content: center;
+  display: flex;
+  align-items: center;
+}
+
+
+input{
+  display: none;
+}
+.loader {
+  margin-right: auto;
+  margin-left: auto;
+  width: 150px;
+  height: 150px;
+}
+.loader img{
   height: 100%;
+  width: 100%;
+}
+.resultDiv{
+display: flex;
+ justify-content: space-around;
+ align-items: center;
+ width: 400px;
+border-radius: 10px;
+margin-right: auto;
+margin-left: auto;
+height: 400px;
+ border: solid teal;
+}
+
+.resultImage {
+  width: 100%;
+  height: 100%;
+}
+
+.resultImageRight{
+  border: solid teal;
+  height: 250px;
+  width: 250px;
+  border-radius: 10px;
+}
+.processing{
+  font-size: 50%;
+}
+
+.uploadedTitle{
+  margin-top: 50px;
+  font-weight: bold;
+  font-size: 14px;
+}
+
+.resultTitle{
+  margin-top: 50px;
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.downloadFile{
+  float: right;
+  border: none;
+  cursor: pointer;
+  color: white;
+  background-color: red;
+  padding: 0.7rem;
+  font-size: 10px;
+  border-radius: 10px;
+  margin-top: 10px;
+  margin-left: 80px;
+  width: 150px;
+  font-weight: bold;
+  text-decoration: none;
+  grid-template-columns: 15% 85%;
+  display: grid;
+  width: 185px;
+}
+label{
+  margin-top: 20px;
+  color: white;
+  background-color: teal;
+  cursor: 2;
+  cursor: pointer;
+  padding: 10px;
+  width: 180px;
+  text-align: center;
+  border-radius: 10px;
+  grid-template-columns: 15% 85%;
+}
+
+
+.cancelIcon{
+  position: absolute;
+  z-index: 10;
+  top: 370px;
+  left: 300px;
+  color: red;
+  cursor: pointer;
+  display: none;
+}
+
+.processingGif{
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  margin: 0 0 20px 0;
+
+}
+
+.downloadSpan{
+  font-size: 0.8rem;
+  margin-left: 10px;
 }
